fix: change Bearar to JWT
